--- a/frontend/src/app/workspace/component/action-plan-view/action-plan-view.component.scss
+++ b/frontend/src/app/workspace/component/action-plan-view/action-plan-view.component.scss
@@ -44,6 +44,7 @@
         gap: 16px;
         font-size: 12px;
         color: #8c8c8c;
+        align-items: center;
 
         span {
           display: flex;
@@ -55,10 +56,6 @@
           }
         }
       }
-    }
-
-    .plan-status {
-      flex-shrink: 0;
     }
   }
 
