--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -20,7 +20,7 @@
 @import "@ali-hm/angular-tree-component/css/angular-tree-component.css";
 
 * {
-  user-select: none;
+  user-select: text;
 }
 
 .ant-image-preview-img {
