feat: introduce sort by account creation time in admin dashboard (#4043)
<!--
Thanks for sending a pull request (PR)! Here are some tips for you:
1. If this is your first time, please read our contributor guidelines:
[Contributing to
Texera](https://github.com/apache/texera/blob/main/CONTRIBUTING.md)
  2. Ensure you have added or run the appropriate tests for your PR
  3. If the PR is work in progress, mark it a draft on GitHub.
  4. Please write your PR title to summarize what this PR proposes, we 
    are following Conventional Commits style for PR titles as well.
  5. Be sure to keep the PR description updated to reflect all changes.
-->

### What changes were proposed in this PR?
<!--
Please clarify what changes you are proposing. The purpose of this
section
is to outline the changes. Here are some tips for you:
  1. If you propose a new API, clarify the use case for a new API.
  2. If you fix a bug, you can clarify why it is a bug.
  3. If it is a refactoring, clarify what has been changed.
  3. It would be helpful to include a before-and-after comparison using 
     screenshots or GIFs.
  4. Please consider writing useful notes for better and faster reviews.
-->
In this PR we introduce a new sort feature to the Account Creation Time
column in admin dashboard. By clicking at the sort button right next to
"Account Creation Time" text, admin user can view the user list sorted
by account creation time (ascending/descending).

Reused the sort button from other columns. In case of ties, the original
order of the users is preserved.
<img width="1314" height="638" alt="image"
src="https://github.com/user-attachments/assets/2f4d1911-340b-4457-8b3a-f7eae4d538fc"
/>


### Any related issues, documentation, discussions?
<!--
Please use this section to link other resources if not mentioned
already.
1. If this PR fixes an issue, please include `Fixes #1234`, `Resolves
#1234`
or `Closes #1234`. If it is only related, simply mention the issue
number.
  2. If there is design d

--- a/frontend/src/app/dashboard/component/admin/user/admin-user.component.html
+++ b/frontend/src/app/dashboard/component/admin/user/admin-user.component.html
@@ -96,7 +96,11 @@
         User Role
       </th>
       <th>Quota</th>
-      <th>Account Creation Time</th>
+      <th
+        [nzSortFn]="sortByAccountCreation"
+        [nzSortDirections]="['ascend', 'descend']">
+        Account Creation Time
+      </th>
     </tr>
   </thead>
   <nz-dropdown-menu #nameMenu="nzDropdownMenu">
