feat: add affiliation attribute to user (#4113)
# What changes were proposed in this PR?
## Summary
To gather more user information for a better overview of users, this PR
introduces a new column `affiliation` to the `user` table. Now when a
user logins to the Texera for the first time (after getting approved to
REGULAR role), they will be prompted to enter their affiliation. The
answer will be recorded to the database and retrieved when admins enter
the admin dashboard.

## For Developers
Please do the following steps to incorporate with new changes:
- Apply sql/updates/16.sql to your local postgres instance
- Run
common/dao/src/main/scala/org/apache/texera/dao/JooqCodeGenerator.scala
to generate jooq tables

## Sample Video


https://github.com/user-attachments/assets/61e895db-8e30-4c59-8e98-fa527995b486


## Design of the Feature
When a user logins to the system for the first time, they will be
prompted to enter their affiliation after getting approved to REGULAR
role. The user can submit their affiliation and the frontend would send
this information to the backend to save in the database. Users can
choose to either enter the affiliation or skip the prompt and the system
would remember if the user has been prompted or not by checking the user
data from the database. Depending on the user's answer, the
`affiliation` column would have different data (more details are
included in "Backend Changes"). The system would only prompt once when
the user logins to the system for the first time and would never ask
again. To view the affiliation information, admins can go to the admin
dashboard to view the affiliations of users.

## Backend Changes
Introduced column `affiliation` to the `user` table. This column would
have three types of entry:
1. null: Indicates the user has never been prompted before. Next time
when the user logins to the system, they will be prompted to answer the
affiliation question.
2. emptry string "": the user has been prompted and did not answer the


--- a/frontend/src/app/dashboard/component/admin/user/admin-user.component.html
+++ b/frontend/src/app/dashboard/component/admin/user/admin-user.component.html
@@ -69,6 +69,7 @@
             nzType="search"></span>
         </nz-filter-trigger>
       </th>
+      <th>Affiliation</th>
       <th
         [nzSortFn]="sortByComment"
         [nzSortDirections]="['ascend', 'descend']"
@@ -230,6 +231,7 @@
           </ng-template>
         </div>
       </td>
+      <td>{{ user.affiliation }}</td>
       <td>
         <div (focusout)="saveEdit()">
           <ng-container *ngIf="editUid !== user.uid || editAttribute !== 'comment'; else editCommentTemplate">
