feat(gui): added sort by affiliation to admin dashboard (#4150)
### What changes were proposed in this PR?
This PR introduces sorting by affiliation to admin dashboard. In PR
#4113 we introduced a new field `afiiliation` to `user` table. To allow
admins to sort by affiliation to quickly navigate through users with
affiliation, we added the sort by affiliation feature to the admin
dashboard. It uses the same comparison logic as other sort functions.

### Any related issues, documentation, discussions?
<!--
Please use this section to link other resources if not mentioned
already.
1. If this PR fixes an issue, please include `Fixes #1234`, `Resolves
#1234`
or `Closes #1234`. If it is only related, simply mention the issue
number.
  2. If there is design documentation, please add the link.
  3. If there is a discussion in the mailing list, please add the link.
-->
Improves #4118.

### Sample screenshot
<img width="1796" height="1226" alt="image"
src="https://github.com/user-attachments/assets/d6310e37-e58a-4df1-bfe4-af5959995ebb"
/>


### How was this PR tested?
<!--
If tests were added, say they were added here. Or simply mention that if
the PR
is tested with existing test cases. Make sure to include/update test
cases that
check the changes thoroughly including negative and positive cases if
possible.
If it was tested in a way different from regular unit tests, please
clarify how
you tested step by step, ideally copy and paste-able, so that other
reviewers can
test and check, and descendants can verify in the future. If tests were
not added,
please describe why they were not added and/or why it was difficult to
add.
-->
Manually tested.


### Was this PR authored or co-authored using generative AI tooling?
<!--
If generative AI tooling has been used in the process of authoring this
PR,
please include the phrase: 'Generated-by: ' followed by the name of the
tool
and its version. If no, write 'No'. 
Please refer to the [ASF Generative Tooling
Guidance](https://www.apache

--- a/frontend/src/app/dashboard/component/admin/user/admin-user.component.html
+++ b/frontend/src/app/dashboard/component/admin/user/admin-user.component.html
@@ -69,7 +69,11 @@
             nzType="search"></span>
         </nz-filter-trigger>
       </th>
-      <th>Affiliation</th>
+      <th
+        [nzSortFn]="sortByAffiliation"
+        [nzSortDirections]="['ascend', 'descend']">
+        Affiliation
+      </th>
       <th
         [nzSortFn]="sortByComment"
         [nzSortDirections]="['ascend', 'descend']"
